force-app/main/default/objects/Sharing_Audit__c/Sharing_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit log for High-Profile Private Client sharing grants and revocations</description>
    <label>Sharing Audit</label>
    <nameField>
        <displayFormat>SHA-{0000}</displayFormat>
        <label>Sharing Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>