force-app/main/default/objects/Sharing_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>e.g. High-Profile restriction applied, Collaborator added</description>
    <label>Action</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>