force-app/main/default/objects/Sharing_Audit__c/fields/Granted_To__c.field-meta.xml
<CustomField>
    <fullName>Granted_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Granted To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sharing Grants</relationshipLabel>
    <relationshipName>Sharing_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>